--- a/index.html
+++ b/index.html
@@ -2,25 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="apple-touch-icon" href="./favicon.svg" />
+    <meta name="theme-color" content="#0066CC" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mac LLM Compatibility Checker</title>
-    <script>
-      // Check if we need to handle a redirect from the 404 page
-      (function() {
-        const redirect = sessionStorage.getItem('redirect');
-        if (redirect) {
-          sessionStorage.removeItem('redirect');
-          const basePath = location.pathname.replace(/\/$/, '');
-          if (redirect !== '/' && redirect) {
-            history.replaceState(null, null, basePath + '/' + redirect);
-          }
-        }
-      })();
-    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
