--- a/public/404.html
+++ b/public/404.html
@@ -1,24 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Redirecting...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page Not Found</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f5f5f7;
+      color: #333;
+      text-align: center;
+      padding: 20px;
+      line-height: 1.6;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 90vh;
+      margin: 0;
+    }
+    .container {
+      max-width: 600px;
+      padding: 40px;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      color: #0066CC;
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+    p {
+      margin-bottom: 20px;
+      font-size: 18px;
+    }
+    .logo {
+      color: #0066CC;
+      font-size: 64px;
+      margin-bottom: 20px;
+    }
+    .button {
+      display: inline-block;
+      background-color: #0066CC;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: background-color 0.2s;
+    }
+    .button:hover {
+      background-color: #0055aa;
+    }
+  </style>
   <script>
-    // Single Page App for GitHub Pages
-    // MIT License
-    // This script takes the current URL and redirects the user to the same URL with
-    // path, but at the root of the app. This allows client-side routing to work on GitHub Pages.
-    (function() {
-      // Get the repository name from the URL
-      const repoName = location.pathname.split('/')[1];
-      const path = location.pathname.split('/').slice(2).join('/');
-      
-      sessionStorage.setItem('redirect', path);
-      location.href = '/' + repoName;
-    })();
+    // Get the repository path for GitHub Pages
+    function getBasePath() {
+      // Extract the first segment of the path, which is the repo name
+      const path = window.location.pathname;
+      const segments = path.split('/');
+      if (segments.length >= 2) {
+        return '/' + segments[1];
+      }
+      return '/';
+    }
+    
+    // Set the home link when the page loads
+    window.onload = function() {
+      document.getElementById('home-link').href = getBasePath();
+    };
   </script>
 </head>
 <body>
-  <p>Redirecting...</p>
+  <div class="container">
+    <div class="logo">404</div>
+    <h1>Page Not Found</h1>
+    <p>The page you're looking for doesn't exist or has been moved.</p>
+    <a id="home-link" href="./" class="button">Back to Home</a>
+  </div>
 </body>
 </html> 
