--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <meta name="description" content="Check which LLM models are compatible with your Mac hardware and specifications. Find the best AI models that run efficiently on your Mac." />
+    <meta name="keywords" content="LLM, Mac compatibility, AI models, machine learning, Apple Silicon, M1, M2, M3, local LLM, AI assistant" />
+    <meta name="author" content="Mac LLM Compatibility Checker" />
+    
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Mac LLM Compatibility Checker" />
+    <meta property="og:description" content="Find which AI models are compatible with your Mac hardware and how well they perform." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./favicon.svg" />
+    
     <link rel="apple-touch-icon" href="./favicon.svg" />
     <meta name="theme-color" content="#0066CC" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
